--- a/style.css
+++ b/style.css
@@ -99,8 +99,8 @@ margin: 2px;float: left;display:inline-block;}
   min-height: 160px;}
 
 .inforight .contacts {background-repeat:no-repeat; background-position:50% 3%; background-size:160%; width:80px; height:100px; display:inline-flex;margin-bottom:15px; border:thin grey solid;}
-
-.contacts p{margin-top:100px;font-size:12px;}
+.inforight .contacts.Xuxa{width:150px; height:340px;margin-top:-60px;margin-bottom:-60px;}
+.contacts p{margin-top:100px;font-size:12px;} .contacts.Xuxa p{font-size:24px;}
 .contacts p.small{font-size:10px; margin-top:100px;}.contacts p.tiny{font-size:6px;margin-top:110px;}
 
 .stats-group div {border:none;}
